chore: application.yml access-exp, refresh-exp 네이밍 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,5 +22,5 @@ jwt:
   header: ${JWT_HEADER}
   prefix: ${JWT_PREFIX}
   secret-key: ${JWT_SECRET_KEY}
-  access-expiration: ${JWT_ACCESS_EXP}
-  refresh-expiration: ${JWT_REFRESH_EXP}
+  access-exp: ${JWT_ACCESS_EXP}
+  refresh-exp: ${JWT_REFRESH_EXP}
