--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,8 @@ app:
   od-say:
     base-url: ${OD_SAY_BASE_URL}
     api-key: ${OD_SAY_API_KEY}
+  kakao-map-api:
+    base-url: ${KAKAO_MAP_API_BASE_URL}
+  data-go:
+    base-url: ${DATA_GO_BASE_URL}
+    service-key: ${DATA_GO_SERVICE_KEY}
