--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,11 +17,8 @@ spring:
 
   data:
     redis:
-      host: ${DATA_REDIS_HOST}
-      port: ${DATA_REDIS_PORT}
-
-redis:
-  host: ${REDIS_HOST}
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
 
 jwt:
   header: ${JWT_HEADER}
